--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-leap-day
-title: ཞེ་ཆེན་དགོན་གྱི་དཔེ་ཀློག་སྒེའུ་ཁུང་།
+title: གཏེར་སྒར་དགོན་གྱི་དཔེ་ཀློག་སྒེའུ་ཁུང་།
 
 
 navbar-links:
